force-app/main/default/objects/Product2/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true the product is available for the OFF SALE.</description>
    <label>Offer Available</label>
    <type>Checkbox</type>
</CustomField>