force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Discount__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>TotalQuantity__c</columns>
    <columns>RemainingQuantity__c</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DISPLAY_URL</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>